--- a/CodeCloudSchool-app/src/CCSchool-vue/package.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
@@ -35,7 +36,7 @@
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.6",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
