--- a/CodeCloudSchool-app/package.json
+++ b/CodeCloudSchool-app/package.json
@@ -14,5 +14,8 @@
     "electron": "^35.1.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6"
+  },
+  "dependencies": {
+    "@vue/cli": "^5.0.8"
   }
 }
