--- a/CodeCloudSchool-app/src/CCSchool-vue/tsconfig.app.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/tsconfig.app.json
@@ -1,12 +1,18 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "extends": "./tsconfig.base.json",
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "electron/**/*.ts"],
+  "exclude": ["src/**/__tests__/*", "dist", "node_modules"],
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "tsBuildInfoFile": "./.cache/tsconfig.app.tsbuildinfo",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["src/*"],
+      "@electron/*": ["electron/*"]  // Add Electron-specific aliases
+    },
+    // Electron-specific settings
+    "target": "ESNext",             // Electron uses modern JS
+    "module": "CommonJS",           // Required for Electron main process
+    "outDir": "./dist",             // Output directory for compiled TS
+    "types": ["node", "electron"]   // Include Electron typings
   }
 }
