--- a/CodeCloudSchool-app/package.json
+++ b/CodeCloudSchool-app/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^35.1.4"
+    "autoprefixer": "^10.4.17",
+    "electron": "^35.1.4",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
