--- a/CodeCloudSchool-app/package.json
+++ b/CodeCloudSchool-app/package.json
@@ -14,5 +14,9 @@
     "electron": "^35.1.4",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.4"
   }
 }
