--- a/CodeCloudSchool-app/src/CCSchool-vue/tsconfig.app.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/tsconfig.app.json
@@ -1,18 +1,15 @@
 {
-  "extends": "./tsconfig.base.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "electron/**/*.ts"],
-  "exclude": ["src/**/__tests__/*", "dist", "node_modules"],
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
-    "tsBuildInfoFile": "./.cache/tsconfig.app.tsbuildinfo",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "@electron/*": ["electron/*"]  // Add Electron-specific aliases
-    },
-    // Electron-specific settings
-    "target": "ESNext",             // Electron uses modern JS
-    "module": "CommonJS",           // Required for Electron main process
-    "outDir": "./dist",             // Output directory for compiled TS
-    "types": ["node", "electron"]   // Include Electron typings
-  }
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "erasableSyntaxOnly": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
