--- a/CodeCloudSchool-app/package.json
+++ b/CodeCloudSchool-app/package.json
@@ -4,16 +4,16 @@
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "EQ",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "electron": "^35.1.4",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6"
+    "electron": "^35.1.4"
   },
   "dependencies": {
     "@vue/cli": "^5.0.8"
