--- a/CodeCloudSchool-app/src/CCSchool-vue/package.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "lucide-vue-next": "^0.509.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
@@ -36,8 +37,8 @@
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
-    "tailwindcss": "^4.1.6",
     "sass-embedded": "^1.87.0",
+    "tailwindcss": "^4.1.6",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
