--- a/CodeCloudSchool-app/src/CCSchool-vue/package.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "lucide-vue-next": "^0.509.0",
+    "pinia": "^3.0.2",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.1",
