--- a/CodeCloudSchool-app/src/CCSchool-vue/package.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/package.json
@@ -20,7 +20,8 @@
     "primevue": "^3.53.1",
     "quill": "^2.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-quill": "^0.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
