--- a/CodeCloudSchool-app/src/CCSchool-vue/package.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dompurify": "^3.2.6",
     "lucide-vue-next": "^0.509.0",
     "pinia": "^3.0.2",
     "primeflex": "^4.0.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
     "@tsconfig/node22": "^22.0.1",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
