--- a/CodeCloudSchool-app/src/CCSchool-vue/package.json
+++ b/CodeCloudSchool-app/src/CCSchool-vue/package.json
@@ -16,14 +16,11 @@
     "axios": "^1.9.0",
     "dompurify": "^3.2.6",
     "lucide-vue-next": "^0.509.0",
-    "pinia": "^3.0.2",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^3.53.1",
-    "quill": "^2.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vue3-quill": "^0.3.1"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
